--- a/_data/2020/duke/speakers.yml
+++ b/_data/2020/duke/speakers.yml
@@ -5,7 +5,7 @@
 
 - name: Zeynep Tufekci
   image: /assets/images/zeynep.jpg
-  bio: "Zeynep Tufeckci is an Associate Professor at the UNC School of Information and Library Science (SILS) and a regular contributor to the New York Times Op-Ed section. Her academic work focuses on social movements and civics, privacy and surveillance, and social interaction."
+  bio: "Zeynep Tufekci is an Associate Professor at the UNC School of Information and Library Science (SILS) and a regular contributor to the New York Times Op-Ed section. Her academic work focuses on social movements and civics, privacy and surveillance, and social interaction."
   website: http://technosociology.org
   
 - name: Elizabeth Bruch
