Add Amalia Alvarez description

--- a/_data/2020/maastricht/speakers.yml
+++ b/_data/2020/maastricht/speakers.yml
@@ -1,1 +1,4 @@
-- name:
+- name: "Amalia Alvarez-Benjumea"
+  image: /assets/images/maas-AmaliaAlvarezBenjumea.jpeg
+  bio: "Amalia Alvarez-Benjumea is a senior research fellow at the Max Planck Institute for Research on Collective Goods in Bonn (Germany), where she works as part of the Max Planck Research Group “Mechanisms for normative change”. She received her Ph.D. in sociology from the University of Cologne, Germany, in 2019. In her current research, she addresses the effect of social norms on the expression of prejudice, particularly online hate speech. She has studied the causal effect of specific interventions, such as censoring hate content, in online hate. She has also studied the impact of terrorist attacks on xenophobic speech in online discussions. She uses different methodological approaches with a focus on experimental methods, particularly online experiments."
+  website: https://alvarezbenjumea.me/
