Add Frank Fagan description

--- a/_data/2020/maastricht/speakers.yml
+++ b/_data/2020/maastricht/speakers.yml
@@ -2,3 +2,8 @@
   image: /assets/images/maas-AmaliaAlvarezBenjumea.jpeg
   bio: "Amalia Alvarez-Benjumea is a senior research fellow at the Max Planck Institute for Research on Collective Goods in Bonn (Germany), where she works as part of the Max Planck Research Group “Mechanisms for normative change”. She received her Ph.D. in sociology from the University of Cologne, Germany, in 2019. In her current research, she addresses the effect of social norms on the expression of prejudice, particularly online hate speech. She has studied the causal effect of specific interventions, such as censoring hate content, in online hate. She has also studied the impact of terrorist attacks on xenophobic speech in online discussions. She uses different methodological approaches with a focus on experimental methods, particularly online experiments."
   website: https://alvarezbenjumea.me/
+
+- name: "Frank Fagan"
+  image: /assets/images/maas-FrankFagan.jpg
+  bio: "Frank Fagan is an Associate Professor of Law at EDHEC Business School and a member of the Legal EDHEC research center. He teaches and writes about contracts, corporations, torts, attorney ethics, and the First Amendment. Work in progress includes empirical analysis of the complete corpus of U.S. contractual good faith case law and theoretical analysis of the strengths and limitations of algorithms in law."
+  website: https://ssrn.com/author=468606
