Quotation mark errors

--- a/_data/2020/duke/participants.yml
+++ b/_data/2020/duke/participants.yml
@@ -18,7 +18,7 @@
 
 - name: Anna Evtushenko
   image: /assets/images/annaEvtushenko.png
-  bio: "Anna Evtushenko is a second-year PhD student in Information Science at Cornell University. She is broadly interested in Computational Social Science—data analysis, simulation and theory—and is currently working on extending the notion of homophily in networks. She got her Bachelor's degree in "Mathematical, Computational, and Statistical Sciences" at Yale-NUS College in Singapore, graduating as part of the first class. She is originally from Russia."
+  bio: "Anna Evtushenko is a second-year PhD student in Information Science at Cornell University. She is broadly interested in Computational Social Science—data analysis, simulation and theory—and is currently working on extending the notion of homophily in networks. She got her Bachelor's degree in Mathematical, Computational, and Statistical Sciences at Yale-NUS College in Singapore, graduating as part of the first class. She is originally from Russia."
   website: "https://infosci.cornell.edu/~anna/"
 
 - name: Carlos Fernández-Loría
