--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -97,7 +97,8 @@
 - date: 2020-06-25
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
-    - name: "4:00 - 5:30 Possible guest speaker"
+    - name: "3:00 - 4:00 Student meetings with guest speaker"
+    - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
 
 - date: 2020-06-26
   name: Present group projects and/or participate in SICSS Festival
