--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -23,8 +23,8 @@
   bio: "Matthew Martin is a PhD Candidate in the Cognitive Informatics program at L'Université du Québec à Montréal (UQAM, Canada). He is also an analyst at The Decision Lab, a non-profit think-tank that uses behavioural science to improve decision-making. His research interest is in finding or creating the best tools for aiding decision-making and subjecting them to rigorous empirical analysis. He holds a Master's degree in psychology and a Bachelor's degree in cognitive science."
   
 - name: David Pelletier
-  image:    
-  bio: 
+  image: /2020/montreal/images/David_Pelletier_photo.jpeg   
+  bio: "David Pelletier is a postdoctoral researcher at McGill University’s Sociology Department and is also affiliated with INRS and Université de Montréal. Trained in demography, he uses surveys and administrative data to study family dynamics and inequality in the Canadian context, but also in the United States and Europe."
 
 - name: Julian Posada
   image: /2020/montreal/images/Julian_posada.png   
