--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -10,6 +10,10 @@
   image: 
   bio: 
   
+- name: Fatim Diabagaté 
+  image: /2020/montreal/images/Fatim_diabate.jpg
+  bio: "Fatim Diabagaté is a PhD candidate in economics at Université de Montréal. She holds a Master's in Statistics and Economics. Her research focuses on labour mobility, immigration and housing. More specifically, her current orientation addresses information issues about workers actual skills, how immigration affects public debt and the impact of parents' homeownership on kids' long-term outcomes. She is interested in deepening her skills in computational science for ongoing projects on gender wage gap using machine learning algorithms."
+  
 - name: Chaimae Drioui
   image: /2020/montreal/images/DRIOUI.Photo.jpg    
   bio: "Drioui Chaimae is a PhD candidate at National Institute of Statistics and Applied Economics (INSEA), Morocco. She is a state engineer in statistics and demography, graduated from INSEA. She is also a member of the GES_3D laboratory (Gender, economics, statistics, demography and sustainable development). Her PhD study is interested in the analysis of fertility and reproductive health with a gender perspective."
