--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -1,3 +1,95 @@
-- date: 2020-07-28
+- date: 2020-05-31
   events:
-    - name: "Schedule coming soon..."
+    - name: "Meet and Greet"
+      time: "15:00-16:00"
+    
+- date: 2020-06-16
+  name: "<b>Introduction and Ethics</b>"
+  events:
+    - name: "<b>Group Formation and Discussion on Ethics</b>"
+      time: "11:00 - 12:00"
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (Akin Unver)</b>"
+      time: "13:00 - 15:00"
+      
+
+- date: 2020-06-17
+  name: "<b>Digital Trace Data</b>"
+  events:
+    - name: "<b>Discussion on Digital Trace Data</b>"
+      time: "11:00 - 12:00"
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (To be announced)</b>"
+      time: "13:00 - 15:00"
+
+- date: 2020-06-18
+  name: "<b>Text as Data</b>"
+  events:
+    - name: "<b>Discussion on Text as Data</b>"
+      time: "11:00 - 12:00"
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (To be announced)</b>"
+      time: "13:00 - 15:00"
+
+- date: 2020-06-19
+  name: "<b>Surveys in the Digital Age</b>"
+  events:
+    - name: "<b>Discussion on Surveys in the Digital Age</b>"
+      time: "11:00 - 12:00"
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (To be announced)</b>"
+      time: "13:00 - 15:00"
+
+- date: 2020-06-20
+  name: "<b>Network Analysis</b>"
+  events:
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (To be announced)</b>"
+      time: "13:00 - 15:00"
+
+- date: 2020-06-21
+  name: "<b>Agent-Based Simulation Modeling</b>"
+  events:
+    - name: "<b>Guest Speaker</b>"
+      time: "11:00 - 12:00"
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (To be announced)</b>"
+      time: "14:30 - 16:00"
+
+- date: 2020-06-23
+  name: "<b>Work on Group Projects</b>"
+  events:
+    - name: "<b>Lunch and Guest Speaker</b>"
+      time: "12:00 - 13:30"
+    - name: "<b>Office Hour</b>"
+      time: "13:30 - 14:30"
+
+- date: 2020-06-24
+  name: "<b>Work on Group Projects</b>"
+  events:
+    - name: "<b>Lunch and Guest Speaker</b>"
+      time: "12:00 - 13:30"
+    - name: "<b>Office Hour</b>"
+      time: "13:30 - 14:30"
+
+- date: 2020-06-25
+  name: "<b>Work on Group Projects</b>"
+  events:
+    - name: "<b>Lunch and Guest Speaker</b>"
+      time: "12:00 - 13:30"
+    - name: "<b>Office Hour</b>"
+      time: "13:30 - 14:30"
+
+- date: 2020-06-26
+  name: "<b>Present Group Projects</b>"
+  events:
+    - name: "<b>Presentations</b>"
+      time: "13:00 - 15:00"
+    - name: "<b>Conclusion </b>"
+      time: "15:00 - 15:30"
