--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -3,7 +3,7 @@
     - name: "Meet and Greet"
       time: "15:00-16:00"
     
-- date: 2020-06-16
+- date: 2020-06-15
   name: "<b>Introduction and Ethics</b>"
   events:
     - name: "<b>Group Formation and Discussion on Ethics</b>"
@@ -13,54 +13,63 @@
     - name: "<b>Tutorial Session (Akin Unver)</b>"
       time: "13:00 - 15:00"
       
-
-- date: 2020-06-17
+- date: 2020-06-16
   name: "<b>Digital Trace Data</b>"
   events:
     - name: "<b>Discussion on Digital Trace Data</b>"
       time: "11:00 - 12:00"
     - name: "<b>Lunch</b>"
       time: "12:00 - 13:00"
-    - name: "<b>Tutorial Session (To be announced)</b>"
+    - name: "<b>Tutorial Session (Pinar Dag)</b>"
       time: "13:00 - 15:00"
 
-- date: 2020-06-18
+- date: 2020-06-17
   name: "<b>Text as Data</b>"
   events:
     - name: "<b>Discussion on Text as Data</b>"
       time: "11:00 - 12:00"
     - name: "<b>Lunch</b>"
       time: "12:00 - 13:00"
-    - name: "<b>Tutorial Session (To be announced)</b>"
+    - name: "<b>Tutorial Session (Ahmet Kurnaz)</b>"
       time: "13:00 - 15:00"
 
-- date: 2020-06-19
+- date: 2020-06-18
   name: "<b>Surveys in the Digital Age</b>"
   events:
     - name: "<b>Discussion on Surveys in the Digital Age</b>"
       time: "11:00 - 12:00"
     - name: "<b>Lunch</b>"
       time: "12:00 - 13:00"
-    - name: "<b>Tutorial Session (To be announced)</b>"
+    - name: "<b>Tutorial Session (Matti Nelimarkka)</b>"
       time: "13:00 - 15:00"
 
-- date: 2020-06-20
+- date: 2020-06-19
   name: "<b>Network Analysis</b>"
   events:
-    - name: "<b>Lunch</b>"
-      time: "12:00 - 13:00"
-    - name: "<b>Tutorial Session (To be announced)</b>"
-      time: "13:00 - 15:00"
-
-- date: 2020-06-21
-  name: "<b>Agent-Based Simulation Modeling</b>"
-  events:
-    - name: "<b>Guest Speaker</b>"
+    - name: "<b>Lecture on Social Network Analysis</b>"
       time: "11:00 - 12:00"
     - name: "<b>Lunch</b>"
       time: "12:00 - 13:00"
-    - name: "<b>Tutorial Session (To be announced)</b>"
+    - name: "<b>Tutorial Session (Onur Varol)</b>"
+      time: "13:00 - 15:00"
+
+- date: 2020-06-20
+  name: "<b>Agent-Based Simulation Modeling</b>"
+  events:
+    - name: "<b>Guest Speaker (Ali Alberth Salah)</b>"
+      time: "11:00 - 12:00"
+    - name: "<b>Lunch</b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Tutorial Session (Merih Angin)</b>"
       time: "14:30 - 16:00"
+
+- date: 2020-06-22
+  name: "<b>Work on Group Projects</b>"
+  events:
+    - name: "<b>Lunch and Guest Speaker</b>"
+      time: "12:00 - 13:30"
+    - name: "<b>Office Hour</b>"
+      time: "13:30 - 14:30"
 
 - date: 2020-06-23
   name: "<b>Work on Group Projects</b>"
@@ -85,7 +94,7 @@
       time: "12:00 - 13:30"
     - name: "<b>Office Hour</b>"
       time: "13:30 - 14:30"
-
+      
 - date: 2020-06-26
   name: "<b>Present Group Projects</b>"
   events:
