--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -56,7 +56,7 @@
 - date: 2020-06-20
   name: "<b>Agent-Based Simulation Modeling</b>"
   events:
-    - name: "<b>Guest Speaker (Ali Alberth Salah)</b>"
+    - name: "<b>Guest Speaker (Albert Ali Salah)</b>"
       time: "11:00 - 12:00"
     - name: "<b>Lunch</b>"
       time: "12:00 - 13:00"
