--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -1,6 +1,6 @@
 - date: 2020-05-31
   events:
-    - name: "Meet and Greet"
+    - name: "<b>Meet and Greet<b>"
       time: "15:00-16:00"
     
 - date: 2020-06-15
