--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -16,7 +16,7 @@
       time: "13:00 - 15:00"
       
 - date: 2020-06-16
-  name: "<b>Digital Trace Data and Computational Journalism</b>"
+  name: "<b>Digital Trace Data</b>"
   events:
     - name: "<b>Discussion on Digital Trace Data</b>"
       time: "11:00 - 12:00"
@@ -26,7 +26,7 @@
       time: "13:00 - 15:00"
 
 - date: 2020-06-17
-  name: "<b>Surveys and Text as Data</b>"
+  name: "<b>Digital Surveys and Text as Data</b>"
   events:
     - name: "<b>Discussion on Surveys in the Digital Age</b>"
       time: "11:00 - 12:00"
