--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -1,9 +1,55 @@
-- day: Materials from 2020 will be placed here
+- day: Virtual SICSS 2020
   id: day_2020
   
 - day: Day 1
-  id: day_1
+  id: day_2019_1
   topic: Introduction and Ethics
+  events:
+    - name: "Introduction to computational social science"
+      video: "https://www.youtube.com/embed/EF7X9wwl0q4"
+      sublinks:
+        - link: "https://youtu.be/EF7X9wwl0q4"
+          text: "Video"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/02-intro-computational-social-science.pdf"
+          text: "Slides"
+    - name: "Why SICSS?"
+      video: "https://www.youtube.com/embed/ae_NQFvF1Dc"
+      sublinks:
+        - link: "https://youtu.be/H_3qbmlZsp0"
+          text: "Video"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/03-ethics.pdf"
+          text: "Slides"
+    - name: "Ethics: Principles-based approach"
+      video: "https://www.youtube.com/embed/H_3qbmlZsp0"
+      sublinks:
+        - link: "https://www.youtube.com/watch?v=H_3qbmlZsp0"
+          text: "Video"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/03-ethics.pdf"
+          text: "Slides"
+    - name: "Four areas of difficulty: informed consent, informational risk, privacy, and making decisions in the face of     uncertainty"
+      video: "https://www.youtube.com/embed/75qv8d8SXW0"
+      sublinks:
+        - link: "https://youtu.be/75qv8d8SXW0"
+          text: "Video"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/04-areas-of-difficulty.pdf"
+          text: "Slides"
+    - name: "Introduction to the group exercise"
+      video: "https://www.youtube.com/embed/8gZ1Ect958M"
+      sublinks:
+        - link: "https://youtu.be/8gZ1Ect958M"
+          text: "Video"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/
+        05-intro-group-exercise.pdf"
+          text: "Slides"
+  exercise_title: "Group exercise"
+  exercise:
+    - name: "Lesson plan"
+      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/activity/lesson_plan_ethics.md"
+    - name: "Case study 1"
+      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/activity/ethics_case_study.pdf"
+    - name: "Case study 2"
+      resource: "https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf"       
+
     
 - day: Day 2
   id: day_2
