--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -6,7 +6,7 @@
   topic: Introduction and Ethics
   events:
     - name: "Introduction to computational social science"
-      video: "https://youtu.be/zGG9wPl1C5E"
+      video: "https://www.youtube.com/embed/zGG9wPl1C5E"
       sublinks:
         - link: "https://youtu.be/zGG9wPl1C5E"
           text: "Video"
