--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -70,7 +70,7 @@
         - link: "https://compsocialscience.github.io/summer-institute/2019/materials/day2-digital-trace-data/what-is-digital-trace-data/What_is_Digital_Trace_Data.html"
           text: "Slides"
     - name: "Strengths and Weakness of Digital Trace Data"
-      video: "https://youtu.be/embed/b8XTtBnENfo"
+      video: "https://www.youtube.com/embed/b8XTtBnENfo"
       sublinks:
         - link: "https://www.youtube.com/b8XTtBnENfo"
           text: "Video"
