--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -10,52 +10,44 @@
       sublinks:
         - link: "https://youtu.be/zGG9wPl1C5E"
           text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/02-intro-computational-social-science.pdf"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/02-intro-computational-social-science.pdf"
           text: "Slides"
     - name: "Why SICSS?"
       video: "https://www.youtube.com/embed/K6HzpZMcaQw"
       sublinks:
         - link: "https://youtu.be/K6HzpZMcaQw"
           text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/03-ethics.pdf"
+        - link: "https://compsocialscience.github.io/summer-institute/2020/materials/day1-intro-ethics/bail_why_sicss/Why_SICSS.html#/"
           text: "Slides"
     - name: "Ethics: Part 1"
       video: "https://www.youtube.com/embed/A-5QaX5ZiK8"
       sublinks:
         - link: "https://youtu.be/A-5QaX5ZiK8"
           text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/03-ethics.pdf"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part1.pdf"
           text: "Slides"
     - name: "Ethics: Part 2"
       video: "https://www.youtube.com/embed/TT6dOQMKHhA"
       sublinks:
         - link: "https://youtu.be/TT6dOQMKHhA"
           text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/04-areas-of-difficulty.pdf"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part2.pdf"
           text: "Slides"
-    - name: "Ethics: Part 3"
+    - name: "Ethics Additions and Extensions"
       video: "https://www.youtube.com/embed/lJyK6kXeDbc"
       sublinks:
         - link: "https://youtu.be/lJyK6kXeDbc"
           text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/04-areas-of-difficulty.pdf"
-          text: "Slides"
-    - name: "Introduction to the Group Exercise"
-      video: "https://www.youtube.com/embed/8gZ1Ect958M"
-      sublinks:
-        - link: "https://youtu.be/8gZ1Ect958M"
-          text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/
-        05-intro-group-exercise.pdf"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_additions_extensions.pdf"
           text: "Slides"
   exercise_title: "Group exercise"
   exercise:
     - name: "Lesson plan"
-      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/activity/lesson_plan_ethics.md"
+      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/lesson_plan_ethics.md"
     - name: "Case study 1"
-      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/activity/ethics_case_study.pdf"
+      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/ethics_case_study.pdf"
     - name: "Case study 2"
-      resource: "https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf"       
+      resource: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/Patreon-Case-Study.pdf"       
 
     
 - day: Day 2
@@ -88,7 +80,7 @@
         - link: "https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/apis/rmarkdown/Application_Programming_interfaces.html"
           text: "Annotated Code"
     - name: "Screen Scraping"
-      video: https://www.youtube.com/embed/LjTZNmBjC5Q"
+      video: "https://www.youtube.com/embed/LjTZNmBjC5Q"
       sublinks:
         - link: "https://youtu.be/LjTZNmBjC5Q"
           text: "Video"
